[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Quadrato.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/LogicaGioco.gd" type="Script" id=2]
[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Hint.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Check.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Risultato.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Back.tscn" type="PackedScene" id=7]



[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Blocchi" type="Node2D" parent="."]

[node name="Quadrato" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 544, 272 )

[node name="Quadrato2" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 608, 272 )

[node name="Quadrato3" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 672, 272 )

[node name="Quadrato4" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 736, 272 )

[node name="Quadrato5" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 800, 272 )

[node name="Quadrato6" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 544, 336 )

[node name="Quadrato7" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 608, 336 )

[node name="Quadrato8" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 672, 336 )

[node name="Quadrato9" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 736, 336 )

[node name="Quadrato10" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 800, 336 )

[node name="Quadrato11" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 544, 400 )

[node name="Quadrato12" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 608, 400 )

[node name="Quadrato13" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 672, 400 )

[node name="Quadrato14" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 736, 400 )

[node name="Quadrato15" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 800, 400 )

[node name="Quadrato16" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 544, 464 )

[node name="Quadrato17" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 608, 464 )

[node name="Quadrato18" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 672, 464 )

[node name="Quadrato19" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 736, 464 )

[node name="Quadrato20" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 800, 464 )

[node name="Quadrato21" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 544, 528 )

[node name="Quadrato22" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 608, 528 )

[node name="Quadrato23" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 672, 528 )

[node name="Quadrato24" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 736, 528 )

[node name="Quadrato25" parent="Blocchi" instance=ExtResource( 1 )]
position = Vector2( 800, 528 )

[node name="ColSum" type="Node2D" parent="."]

[node name="Label" type="Label" parent="ColSum"]
margin_left = 520.0
margin_top = 184.0
margin_right = 570.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColSum"]
margin_left = 584.0
margin_top = 184.0
margin_right = 634.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="ColSum"]
margin_left = 648.0
margin_top = 184.0
margin_right = 698.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="ColSum"]
margin_left = 712.0
margin_top = 184.0
margin_right = 762.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="ColSum"]
margin_left = 776.0
margin_top = 184.0
margin_right = 826.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RowSum" type="Node2D" parent="."]
position = Vector2( -64, 64 )

[node name="Label" type="Label" parent="RowSum"]
margin_left = 520.0
margin_top = 184.0
margin_right = 570.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="RowSum"]
margin_left = 520.0
margin_top = 248.0
margin_right = 570.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="RowSum"]
margin_left = 520.0
margin_top = 312.0
margin_right = 570.0
margin_bottom = 362.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="RowSum"]
margin_left = 520.0
margin_top = 376.0
margin_right = 570.0
margin_bottom = 426.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="RowSum"]
margin_left = 520.0
margin_top = 440.0
margin_right = 570.0
margin_bottom = 490.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" parent="." instance=ExtResource( 4 )]

[node name="Check" parent="." instance=ExtResource( 5 )]

[node name="Back" parent="." instance=ExtResource( 7 )]
margin_left = 896.0
margin_top = 232.0
margin_right = 1000.0
margin_bottom = 272.0

[node name="Risultato" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="Hint" to="." method="_on_Hint_pressed"]
[connection signal="pressed" from="Check" to="." method="_on_Check_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
